<resources>
    <string name="app_name">Text2Gmail</string>
    <string name="tab_text_1">Status</string>
    <string name="tab_text_2">Messages</string>
    <string name="tab_text_3">Settings</string>
    <string name="action_settings">Settings</string>

    <string name="contacts_permission_dialog_message">
        Text2Gmail uses contact permissions to display known contacts that are sending incoming text messages and phone calls.
        It is highly recommended to give this permission to the app for a better user experience.
    </string>>

    //Email Config Strings
    <string name="status_label_text_running">Running</string>
    <string name="status_label_text_stopped">Stopped</string>
    <string name="status_label_text_not_scheduled">Not Scheduled</string>
    <string name="status_label_text_not_configured">Not Configured</string>
    <string name="label_schedule_time_off_text">Scheduling is OFF</string>>
    <string name="service_status_text">Service Status</string>
    <string name="scheduling_mode_status_text">Scheduling Mode</string>
    <string name="set_schedule_button_text">Set Schedule</string>
    <string name="email_configuration_text">Email Configuration</string>
    <string name="configure_email_button_text">Configure Email</string>
    <string name="label_unconfigured_email_text">There are currently no e-mails configured yet.</string>

    //Daily Scheduler Strings
    <string name="start_time_label_text">Start Time</string>>
    <string name="end_time_label_text">End Time</string>>
    <string name="time_picker_dialog_fragment_message">Please enter a time:</string>
    <string name="button_apply_text">Apply</string>
    <string name="button_ok_text">OK</string>
    <string name="mon_abbr">M</string>
    <string name="tue_abbr">T</string>
    <string name="wed_abbr">W</string>
    <string name="thu_abbr">T</string>
    <string name="fri_abbr">F</string>
    <string name="sat_abbr">S</string>
    <string name="sun_abbr">S</string>

    <string name="time_picker_dialog_fragment_invalid_time">Please enter a valid start and end time.</string>
    <string name="time_picker_dialog_fragment_end_not_after_start">The end time must be after the start time!</string>

    <string name="schedule_list_item_text_view_day_of_week_text">Day Of Week</string>
    <string name="schedule_list_item_text_view_header_start_time_text">Start</string>
    <string name="schedule_list_item_text_view_scheduled_start_time_text">Start Time</string>
    <string name="schedule_list_item_text_view_header_end_time_text">End</string>
    <string name="schedule_list_item_text_view_scheduled_end_time_text">End Time</string>

    //Message Log Strings
    <string name="empty_message_text">No messages have been sent</string>
    <string name="clear_log_button_text">Clear</string>
    <string name="date_received">Date Received</string>
    <string name="sender">Sender</string>
    <string-array name="sort_options">
        <item>@string/date_received</item>
        <item>@string/sender</item>
    </string-array>

    <string name="log_entry_sender_text_view_text">Sender</string>
    <string name="log_entry_message_text_view_text">Message</string>
    <string name="log_entry_date_received_text_view_text">Date Received</string>
    <string name="log_entry_send_successful_view_text">Send Successful</string>

    //Settings Strings
    <string name="missed_calls_text">Forward Missed Calls</string>
    <string name="blocked_contacts_text">Blocked Contacts</string>
    <string name="blocked_contacts_manual_text">Manual</string>
    <string name="blocked_contacts_from_book_text">From Contacts</string>
    <string name="label_empty_blocked_contacts_text">There are currently no blocked contacts</string>

    <string name="blocked_contacts_manual_dialog_text">Please enter a phone number to block:</string>
    <string name="blocked_contacts_manual_dialog_error_text">Please enter a valid phone number.</string>

    //Contact Selection
    <string name="button_add_contact_state_unadded_text">Add</string>
    <string name="button_add_contact_state_added_text">Added</string>

    //Misc Strings
    <string name="search">Search</string>
</resources>
