<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBoxMissedCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelMissedCalls"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/labelMissedCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/missed_calls_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelBlockedContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/blocked_contacts_text"
        app:layout_constraintStart_toStartOf="@+id/labelMissedCalls"
        app:layout_constraintTop_toBottomOf="@+id/labelMissedCalls" />

    <Button
        android:id="@+id/buttonBlockContactsManual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/blocked_contacts_manual_text"
        app:layout_constraintEnd_toStartOf="@+id/buttonBlockContactsFromBook"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toEndOf="@+id/labelBlockedContacts"
        app:layout_constraintTop_toBottomOf="@+id/labelBlockedContacts" />

    <Button
        android:id="@+id/buttonBlockContactsFromBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/blocked_contacts_from_book_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonBlockContactsManual"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>